--- a/app/public/css/desktop.css
+++ b/app/public/css/desktop.css
@@ -1,95 +1,59 @@
+:root {
+	--background: #1d1d1d;
+
+	--foreground: #fff;
+	--foreground-mute: #999999;
+
+	--primary: #00ff99;
+
+	--fs-small: 0.8rem;
+}
+
 body {
-  display: flex;
-  flex-direction: column;
-  margin: 0px;
-  min-height: 100vh;
-  overflow: hidden;
-  font-size: 14px;
-  background-color: #f6f6f6;
-  color: black;
-  font-family: sans-serif;
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+	background: var(--background);
+	color: var(--foreground);
+	min-height: 100vh;
 }
 
 main {
-  flex: auto;
-  display: flex;
-  flex-direction: column;
-  position: relative;
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	padding: 2rem;
 }
 
-a {
-  color: inherit;
+.title {
+	font-size: 2rem;
+	margin-bottom: 1rem;
+	color: var(--primary);
+	font-weight: bold;
+	text-transform: uppercase;
 }
 
-.desktopTop {
-  color: white;
-  background-image: url("../img/background.svg");
-  width: 100%;
-  height: 243px;
-  top: 0;
-  text-align: center;
+.title--small {
+	font-size: 1rem;
+	color: var(--foreground-mute);
+	text-transform: none;
 }
 
-.desktopTop h1 {
-  font-family: "Roboto Mono", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 24px;
-  color: #d5d5d5;
-  margin-top: 40px;
+.guide {
+	margin-top: 2rem;
+	color: var(--foreground-mute);
+	font-size: var(--fs-small);
 }
 
-.desktopTop p {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  color: #d5d5d5;
-  font-size: 15px;
-  line-height: 20px;
+.list-item {
+	margin-bottom: 0.5rem;
 }
 
-#version {
-  margin-top: 57px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  color: #8d8d8d;
-}
-
-.desktopBottom {
-  background-color: #464646;
-  width: 100%;
-  flex: 1;
-  display: flex;
-  padding: 67px 0px;
-}
-
-.desktopBottom > #left {
-  flex: 1 1 30%;
-}
-
-.desktopBottom > #left > h1 {
-  font-family: "Roboto Mono", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  margin: 0px 57px;
-  color: #d5d5d5;
-}
-
-.desktopBottom > #middle {
-  flex: 1 1 40%;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  color: #8d8d8d;
-}
-
-.desktopBottom > #right {
-  flex: 1 1 30%;
-}
-
-#ad {
-  display: inline-block;
-  margin-right: 10px;
+footer {
+	text-align: center;
+	line-height: 0.5;
+	color: var(--foreground-mute);
+	font-size: var(--fs-small);
 }
